--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -8,7 +8,7 @@ $max-width:1100px;
 //Set text color based on background
 
 @function set-text-color($color){
-    @if(lightness($color) > 50) {
+    @if(lightness($color) > 60) {
         @return #333;
     }@else{
         @return #fff;
@@ -20,4 +20,28 @@ $max-width:1100px;
 @mixin set-background($color) {
     background-color: $color;
     color: set-text-color($color);
+}
+
+//Margin & Padding
+$spaceamounts: (1,2,3,4,5);
+
+@each $space in $spaceamounts {
+    //All around margin
+    .m-#{$space}{
+        margin: #{$space}rem;
+    }
+
+    //Vertical Margin
+    .my-#{$space}{
+        margin: #{$space}rem 0;
+    }
+
+    .p-#{$space}{
+        padding: #{$space}rem;
+    }
+
+    //Vertical Margin
+    .py-#{$space}{
+        padding: #{$space}rem 0;
+    }
 }
