--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,10 @@
   color: #17a2b8;
 }
 
+.round-img {
+  border-radius: 30%;
+}
+
 .bg-primary {
   background-color: #17a2b8;
   color: #fff;
@@ -280,7 +284,8 @@ ul {
 }
 
 img {
-  width: 100%;
+  width: 20%;
+  height: 5%;
 }
 
 .navbar {
@@ -326,5 +331,46 @@ img {
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+.profile {
+  display: grid;
+  grid-template-columns: 2fr 4fr 2fr;
+  grid-gap: 2rem;
+  align-items: center;
+  padding: 1rem;
+  line-height: 1.6;
+  margin-bottom: 1rem;
+}
+
+.profile-grid {
+  display: grid;
+  grid-template-areas: 'top top' 'about about' 'exp edu' 'github github';
+  grid-gap: 1rem;
+}
+
+.profile-grid .profile-top {
+  grid-area: top;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.profile-grid .profile-about {
+  grid-area: about;
+}
+
+.profile-grid .profile-exp {
+  grid-area: exp;
+}
+
+.profile-grid .profile-edu {
+  grid-area: edu;
+}
+
+.profile-grid .profile-github {
+  grid-area: github;
 }
 /*# sourceMappingURL=style.css.map */
