--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,7 +26,8 @@ ul{
 }
 
 img{
-    width:100%;
+    width:20%;
+    height: 5%;
 }
 
 //Navbar
@@ -73,5 +74,52 @@ img{
         align-items: center;
         justify-content: center;
         text-align: center;
+    }
+}
+
+//Profile
+.profile{
+    display: grid;
+    grid-template-columns: 2fr 4fr 2fr;
+    grid-gap:2rem;
+    align-items: center;
+    padding: 1rem;
+    line-height: 1.6;
+    margin-bottom: 1rem;
+}
+
+//Profile Page
+.profile-grid {
+    display:grid;
+    grid-template-areas:
+    'top top'
+    'about about'
+    'exp edu'
+    'github github';
+    grid-gap:1rem;
+
+    .profile-top{
+        grid-area:top;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .profile-about {
+        grid-area:about;
+    }
+
+    .profile-exp {
+        grid-area:exp;
+    }
+
+    .profile-edu {
+        grid-area:edu;
+    }
+
+    .profile-github {
+        grid-area:github;
     }
 }
